--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.13.0",
 		"@supabase/supabase-js": "^2.45.6",
+		"bufferutil": "^4.0.8",
 		"class-variance-authority": "^0.7.0",
 		"date-fns": "^4.1.0",
-		"lucide-svelte": "^0.453.0"
+		"lucide-svelte": "^0.453.0",
+		"utf-8-validate": "^6.0.4",
+		"ws": "^8.18.0"
 	}
 }
