--- a/package.json
+++ b/package.json
@@ -3,35 +3,36 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-	  "dev": "vite dev",
-	  "build": "vite build",
-	  "preview": "vite preview",
-	  "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-	  "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-	  "lint": "eslint ."
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint ."
 	},
 	"type": "module",
 	"devDependencies": {
-	  "@sveltejs/adapter-node": "^5.2.9",
-	  "@sveltejs/kit": "^2.0.0",
-	  "@sveltejs/vite-plugin-svelte": "^4.0.0",
-	  "autoprefixer": "^10.4.20",
-	  "less": "^4.2.0",
-	  "postcss": "^8.4.47",
-	  "svelte": "^5.0.0",
-	  "svelte-check": "^4.0.0",
-	  "tailwindcss": "^3.4.14",
-	  "typescript": "^5.0.0",
-	  "vite": "^5.0.11"
+		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"less": "^4.2.0",
+		"postcss": "^8.4.47",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.0.0",
+		"vite": "^5.0.11"
 	},
 	"dependencies": {
-	  "@supabase/auth-helpers-sveltekit": "^0.13.0",
-	  "@supabase/supabase-js": "^2.45.6",
-	  "bufferutil": "^4.0.8",
-	  "class-variance-authority": "^0.7.0",
-	  "date-fns": "^4.1.0",
-	  "lucide-svelte": "^0.453.0",
-	  "utf-8-validate": "^6.0.4",
-	  "ws": "^8.18.0"
+		"@supabase/auth-helpers-sveltekit": "^0.13.0",
+		"@supabase/supabase-js": "^2.45.6",
+		"bufferutil": "^4.0.8",
+		"class-variance-authority": "^0.7.0",
+		"date-fns": "^4.1.0",
+		"lucide-svelte": "^0.453.0",
+		"utf-8-validate": "^6.0.4",
+		"ws": "^8.18.0"
 	}
-  }
+}
