--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
   command = "pnpm build"
   publish = "build"
+  
+[build.processing]
+  skip_processing = false
 
 [build.environment]
   NODE_VERSION = "18"
