--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"type": "module",
 	"devDependencies": {
+		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
